--- a/index.html
+++ b/index.html
@@ -1,42 +1,37 @@
-<!doctype html>
-<!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
-<!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on http://github.com/jonrohan -->
+<!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen"/>
-  <link rel="stylesheet" href="stylesheets/pygment_trac.css"/>
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-  <script type="text/javascript" src="javascripts/script.js"></script>
+  <head>
+    <meta charset='utf-8' />
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+    <meta name="description" content="Sudoku-solver : The objective of this program is to fill a 9×9 grid with digits so that each column, each row, and each of the nine 3×3 sub-grids that compose the grid (Regions), the same single integer may not appear twice in the same 9×9 playing board row or column or in any of the nine regions." />
 
-  <title>Sudoku-solver</title>
-  <meta name="description" content="The objective of this program is to fill a 9×9 grid with digits so that each column, each row, and each of the nine 3×3 sub-grids that compose the grid (Regions), the same single integer may not appear twice in the same 9×9 playing board row or column or in any of the nine regions.">
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>Sudoku-solver</title>
+  </head>
 
-</head>
+  <body>
 
-<body>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/cyounes/Sudoku-Solver">View on GitHub</a>
 
-  <div class="wrapper">
-    <header>
-      <h1 class="title">Sudoku-solver</h1>
-    </header>
-    <div id="container">
-      <p class="tagline">The objective of this program is to fill a 9×9 grid with digits so that each column, each row, and each of the nine 3×3 sub-grids that compose the grid (Regions), the same single integer may not appear twice in the same 9×9 playing board row or column or in any of the nine regions.</p>
-      <div id="main" role="main">
-        <div class="download-bar">
-        <div class="inner">
-          <a href="https://github.com/cyounes/Sudoku-Solver/tarball/master" class="download-button tar"><span>Download</span></a>
-          <a href="https://github.com/cyounes/Sudoku-Solver/zipball/master" class="download-button zip"><span>Download</span></a>
-          <a href="https://github.com/cyounes/Sudoku-Solver" class="code">View Sudoku-solver on GitHub</a>
-        </div>
-        <span class="blc"></span><span class="trc"></span>
-        </div>
-        <article class="markdown-body">
-          <h1>Sudoku Solver</h1>
+          <h1 id="project_title">Sudoku-solver</h1>
+          <h2 id="project_tagline">The objective of this program is to fill a 9×9 grid with digits so that each column, each row, and each of the nine 3×3 sub-grids that compose the grid (Regions), the same single integer may not appear twice in the same 9×9 playing board row or column or in any of the nine regions.</h2>
+
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/cyounes/Sudoku-Solver/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/cyounes/Sudoku-Solver/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
+        <h1>Sudoku Solver</h1>
 
 <hr><pre><code>     $$$$$$\                $$\         $$\                      
     $$  __$$\               $$ |        $$ |                     
@@ -86,26 +81,18 @@ $ make
 <blockquote>
 <p>Please, if you can help me to translate the UI of this program to english language don't hesitate to do :)</p>
 </blockquote>
-        </article>
-      </div>
+      </section>
     </div>
-    <footer>
-      <div class="owner">
-      <p><a href="https://github.com/cyounes" class="avatar"><img src="https://secure.gravatar.com/avatar/aa413781a3cc7b265536282483dbe8a0?s=30&amp;d=https://a248.e.akamai.net/assets.github.com%2Fimages%2Fgravatars%2Fgravatar-user-420.png" width="48" height="48"/></a> <a href="https://github.com/cyounes">cyounes</a> maintains <a href="https://github.com/cyounes/Sudoku-Solver">Sudoku-solver</a></p>
 
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">Sudoku-solver maintained by <a href="https://github.com/cyounes">cyounes</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
 
-      </div>
-      <div class="creds">
-        <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br/>theme by <a href="http://twitter.com/jonrohan/">Jon Rohan</a></small>
-      </div>
-    </footer>
-  </div>
-  <div class="current-section">
-    <a href="#top">Scroll to top</a>
-    <a href="https://github.com/cyounes/Sudoku-Solver/tarball/master" class="tar">tar</a><a href="https://github.com/cyounes/Sudoku-Solver/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
-    <p class="name"></p>
-  </div>
+    
 
-  
-</body>
+  </body>
 </html>
