Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,36 +1,33 @@
 <!DOCTYPE html>
 <html>
-
   <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Sudoku-solver : The objective of this program is to fill a 9×9 grid with digits so that each column, each row, and each of the nine 3×3 sub-grids that compose the grid (Regions), the same single integer may not appear twice in the same 9×9 playing board row or column or in any of the nine regions." />
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
 
-    <title>Sudoku-solver</title>
+    <title>Sudoku-solver by cyounes</title>
   </head>
 
   <body>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/cyounes/Sudoku-Solver">View on GitHub</a>
+    <header>
+      <div class="container">
+        <h1>Sudoku-solver</h1>
+        <h2>The objective of this program is to fill a 9×9 grid with digits so that each column, each row, and each of the nine 3×3 sub-grids that compose the grid (Regions), the same single integer may not appear twice in the same 9×9 playing board row or column or in any of the nine regions.</h2>
 
-          <h1 id="project_title">Sudoku-solver</h1>
-          <h2 id="project_tagline">The objective of this program is to fill a 9×9 grid with digits so that each column, each row, and each of the nine 3×3 sub-grids that compose the grid (Regions), the same single integer may not appear twice in the same 9×9 playing board row or column or in any of the nine regions.</h2>
+        <section id="downloads">
+          <a href="https://github.com/cyounes/Sudoku-Solver/zipball/master" class="btn">Download as .zip</a>
+          <a href="https://github.com/cyounes/Sudoku-Solver/tarball/master" class="btn">Download as .tar.gz</a>
+          <a href="https://github.com/cyounes/Sudoku-Solver" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+        </section>
+      </div>
+    </header>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/cyounes/Sudoku-Solver/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/cyounes/Sudoku-Solver/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
+    <div class="container">
+      <section id="main_content">
         <h1>Sudoku Solver</h1>
 
 <hr><pre><code>     $$$$$$\                $$\         $$\                      
@@ -84,15 +81,16 @@ $ make
       </section>
     </div>
 
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Sudoku-solver maintained by <a href="https://github.com/cyounes">cyounes</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
-    
+              <script type="text/javascript">
+            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+          </script>
+          <script type="text/javascript">
+            try {
+              var pageTracker = _gat._getTracker("UA-36460034-1");
+            pageTracker._trackPageview();
+            } catch(err) {}
+          </script>
 
   </body>
 </html>
