Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,33 +1,44 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
-
     <title>Sudoku-solver by cyounes</title>
-  </head>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script src="javascripts/main.js"></script>
+    <!--[if lt IE 9]>
+      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
+  </head>
   <body>
 
-    <header>
-      <div class="container">
+      <header>
         <h1>Sudoku-solver</h1>
-        <h2>The objective of this program is to fill a 9×9 grid with digits so that each column, each row, and each of the nine 3×3 sub-grids that compose the grid (Regions), the same single integer may not appear twice in the same 9×9 playing board row or column or in any of the nine regions.</h2>
+        <p>The objective of this program is to fill a 9×9 grid with digits so that each column, each row, and each of the nine 3×3 sub-grids that compose the grid (Regions), the same single integer may not appear twice in the same 9×9 playing board row or column or in any of the nine regions.</p>
+      </header>
 
-        <section id="downloads">
-          <a href="https://github.com/cyounes/Sudoku-Solver/zipball/master" class="btn">Download as .zip</a>
-          <a href="https://github.com/cyounes/Sudoku-Solver/tarball/master" class="btn">Download as .tar.gz</a>
-          <a href="https://github.com/cyounes/Sudoku-Solver" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-        </section>
-      </div>
-    </header>
+      <div id="banner">
+        <span id="logo"></span>
 
-    <div class="container">
-      <section id="main_content">
+        <a href="https://github.com/cyounes/Sudoku-Solver" class="button fork"><strong>View On GitHub</strong></a>
+        <div class="downloads">
+          <span>Downloads:</span>
+          <ul>
+            <li><a href="https://github.com/cyounes/Sudoku-Solver/zipball/master" class="button">ZIP</a></li>
+            <li><a href="https://github.com/cyounes/Sudoku-Solver/tarball/master" class="button">TAR</a></li>
+          </ul>
+        </div>
+      </div><!-- end banner -->
+
+    <div class="wrapper">
+      <nav>
+        <ul></ul>
+      </nav>
+      <section>
         <h1>Sudoku Solver</h1>
 
 <hr><pre><code>     $$$$$$\                $$\         $$\                      
@@ -79,8 +90,12 @@ $ make
 <p>Please, if you can help me to translate the UI of this program to english language don't hesitate to do :)</p>
 </blockquote>
       </section>
+      <footer>
+        <p>Project maintained by <a href="https://github.com/cyounes">cyounes</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="http://twitter.com/#!/michigangraham">mattgraham</a></small></p>
+      </footer>
     </div>
-
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
               <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
